# ChatApp_Rust_TypeScript

./: README.md
backend/Rust/: Cargo.toml
backend/Rust/src/: main.rs
backend/Rust/src/database/: database.rs
backend/Rust/src/models/: conversa.rs  mod.rs
backend/Rust/src/services/: conversa.rs  mensagem.rs
backend/TypeScript/: package-lock.json  package.json
backend/TypeScript/src/: index.ts
backend/TypeScript/src/server/: Server.ts
backend/TypeScript/src/server/routes/: usuario.ts
backend/api_principal/: Cargo.toml
backend/api_principal/src/: main.rs
frontend/HTML/: home.html  index.html
frontend/SCSS/: _colors.scss  _home.scss
