[package]
name = "api_principal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
crypt = "0.1.0"
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
serde = { version = "1.0.195" , features = ["derive"] }
serde_json = "1.0.111"
sqlx = "0.7.3"
